test/sema/type_inference_error.yl
// RUN: compiler %s -res-dump 2>&1 | filecheck %s
fn main(): void {
    // CHECK: [[# @LINE + 1 ]]:9: error: a variable of 'void' type is not allowed
    let x = main();
    
    // CHECK: [[# @LINE + 1 ]]:9: error: a variable of 'void' type is not allowed
    var y = main();

    let x2;
    
    var y2;

    x2 = 0.0;
    
    y2 = 0.0;
}
